--- a/lib/templates/authordetail.html
+++ b/lib/templates/authordetail.html
@@ -1,5 +1,10 @@
 {% extends 'base.html'%}
 {% load static %}
 {% block content %}
-<h1>hi<hi>
+
+    <ul>
+        <li>Book_name:{{book.book_name}}</li>
+        <li>Book_tittle:{{book.book_tittle}}</li>
+        <li>Book_author:{{book.book_author}}</li>
+    </ul>
 {% endblock %}
