--- a/lib/templates/registration.html
+++ b/lib/templates/registration.html
@@ -3,5 +3,17 @@
 {% block content %}
     
     <h1>Registration</h1>
-    
+    <div class="content-section">
+        <form method='POST' enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4"></legend>
+                {{ form.as_p }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">SUBMIT<button>
+            </div>
+            </form>
+        </div>
+
  {% endblock %}
