--- a/lib/static/css/style.css
+++ b/lib/static/css/style.css
@@ -1,5 +1,5 @@
 h2{
-    color: blueviolet;
+  text-decoration-color: aqua;
 }
   * {
     box-sizing: border-box;
@@ -83,4 +83,17 @@ h2{
     width: 100%;
     text-align: left; /* If you want the text to be left-aligned on small screens */
   }
+}
+.picturecard{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+}
+
+.picturecard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.picturecontainer {
+  padding: 2px 16px;
 }
