--- a/lib/templates/authordetail.html
+++ b/lib/templates/authordetail.html
@@ -4,12 +4,11 @@
 
     
     <div class="picturecard">
-        <img src="{{book.pic.url}}" alt="Avatar" width="150"/>
+        <img src="{{book.pic.url}}" alt="Avatar" width="100%"/>
         <div class="picturecontainer">
           <h4><b>{{book.book_tittle}}</b></h4> 
           <h5>{{book.book_author}}</h5>
           <p>{{book.book_name}}</p> 
-          <h2>hi</h2>
         </div>
       </div>
       
