--- a/lib/templates/index.html
+++ b/lib/templates/index.html
@@ -8,7 +8,7 @@
         <div class="col-sm-4">
           <div class="card">
             <div class="card-body">
-              <img src="{{book.pic.url}}" width="100"/>
+              <img src="{{book.pic.url}}" width="50%"/>
               <a href="{% url 'authordetail' book.id %}">
               <h5 class="card-title">{{ book.book_name }}</h5></a>
               <h1 class="card-text">{{book.book_tittle}}</h1>
