--- a/lib/templates/registration.html
+++ b/lib/templates/registration.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     
-    <h1>Registration</h1>
+    <h1>Registration Form</h1>
     <div class="content-section">
         <form method='POST' enctype="multipart/form-data">
             {% csrf_token %}
